--- a/Languages/Portuguese/DefInjected/ThingDef/TranslateThings.xml
+++ b/Languages/Portuguese/DefInjected/ThingDef/TranslateThings.xml
@@ -15,7 +15,7 @@
   <Target.label>Alvo</Target.label>
   <Target.description>Um estande de tiro para seus atiradores desenvolverem suas habilidades.</Target.description>
 
-  <Target.label>Boneco de Treino</Target.label>
-  <Target.description>Um boneco de palha para treinar habilidades de combate.</Target.description>
+  <MrDummy.label>Boneco de Treino</MrDummy.label>
+  <MrDummy.description>Um boneco de palha para treinar habilidades de combate.</MrDummy.description>
 
 </LanguageData>
