--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -78,6 +78,8 @@
   <EvilWeapon>Pawn cannot comprehend this weapon and is scared of it</EvilWeapon>
   <TechAlreadyKnown>{0_label} is already known.</TechAlreadyKnown>
   
+  <NoWeaponEquipped>Invalid equipment.</NoWeaponEquipped>
+  
   <!--weapon testing -->
   <WeaponTestFail>{0_nameDef} couldn't figure out how {1_definite} works.</WeaponTestFail>
   <FearedWeapon>{0_nameDef} has tried these weapons before with bad results.</FearedWeapon>
